--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
 # FastAPI and web server dependencies
-fastapi
-uvicorn[standard]
-pydantic
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
 
 # Environment variable management
-python-dotenv
+python-dotenv==1.0.0
 
 # Database and data processing
-duckdb
-pandas
+duckdb==0.9.2
+pandas==2.1.4
 
 # Azure services
-azure-storage-blob
+azure-storage-blob==12.19.0
 
 # AI/ML and language processing
-langchain-openai
-openai
+langchain-openai==0.1.13
+openai==1.30.1
 
 # Standard library imports (no installation needed)
 # - os
